2008-06-04  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * data/maps/earth/openstreetmap/openstreetmap.dgml:

    Add properties Places/places and Places/otherplaces in order to
    display KML placemarks in the OpenStreetMap view.

2008-06-04  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/PlaceMarkPainter.h:
    * src/lib/PlaceMarkPainter.cpp:

    Fix includes.

2008-06-04  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/gps/RouteContainer.cpp:
    * src/lib/gps/Route.h:
    * src/lib/gps/TrackContainer.cpp:
    * src/lib/gps/Track.h:
    * src/lib/gps/WaypointContainer.cpp:
    * src/lib/gps/TrackPoint.cpp:
    * src/lib/gps/WaypointContainer.h:
    * src/lib/gps/TrackSegment.h:
    * src/lib/AbstractLayer/AbstractLayer.cpp:
    * src/lib/AbstractLayer/AbstractLayerContainer.cpp:
    * src/lib/AbstractLayer/AbstractLayer.h:
    * src/lib/AbstractLayer/AbstractLayerContainer.h:

    Mainly include fixes but some other cleanups also.

2008-06-04  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/MarblePhysics.cpp:
    * src/lib/MarblePhysics.h:

    Fix includes.

2008-06-04  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/gps/Waypoint.cpp:
    * src/lib/gps/Waypoint.h:

    - Fix potential memory leaks and null pointer dereferences by converting
      pointer members to their base types.
    - Constify getters.

2008-06-04  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/gps/GpsElement.cpp:
    * src/lib/gps/GpsElement.h:

    - Declare destructor virtual because there are derived classes.
    - Fix potential memory leaks and null pointer dereferences by converting
      pointer members to their base types.
    - Constify getters.

2008-06-02  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/VectorComposer.h:
    * src/lib/FileViewModel.h:
    * src/lib/PlaceMarkPainter.cpp:
    * src/lib/FileViewModel.cpp:
    * src/lib/XmlHandler.h:
    * src/lib/GpxFileViewItem.h:
    * src/lib/TextureColorizer.cpp: