@@ -1,3 +1,9 @@
+2008-06-05  Jens-Michael Hoffmann  <jensmh@gmx.de>
+
+    * src/lib/PlaceMarkLayout.cpp
+
+    Replace C style casts ob qobject_cast.
+
 2008-06-04  Jens-Michael Hoffmann  <jensmh@gmx.de>
 
     * data/maps/earth/openstreetmap/openstreetmap.dgml:
